0.0.1:
- support for more profiles (more MUC, settings)
- methods muc, msg, nick and bot are available in plugins directly
- Ctrl-c 1x => reload (plugins and core), 2x => terminate