@@ -1,19 +1,21 @@
-account:
-  nick: <nick-in-muc>
-  jid: <your-bot>@<your-provider>.<tld>
-  resource: <resource>
-  password: <somepassword>
-profiles:
+:account:
+  :nick: <nick-in-muc>
+  :jid: <your-bot>@<your-provider>.<tld>
+  :resource: <resource>
+  :password: <somepassword>
+:profiles:
   # this profile is default
   # if you do not specify some of profile options,
   # they will be taken from default profile
-  default:
-    room: pokec@conference.itcrowd.cz
-    nick: botabot
+  :default:
+    :room: pokec@conference.itcrowd.cz
+    :nick: botabot
     # possibilities: command: %c, nick: %n
     # .about
     # botabot: about
     # botabot, about
     format: [".%c", "%n: ", "%n, "]
-  merb: merb@conf.netlab.cz
-  robots: robots@conf.netlab.cz
+    # when matched command doesn't exist use this
+    :missing: commands
+  :merb: merb@conf.netlab.cz
+  :robots: robots@conf.netlab.cz
