@@ -1,6 +1,5 @@
 require "yaml"
 require "singleton"
-require "ostruct"
 
 module BotaBot
   class Config
@@ -10,27 +9,31 @@ module BotaBot
       @settings = YAML::load_file(file)
     end
     
-    def nick
-      @settings["account"]["nick"]
-    end
-    
-    def jid
-      @settings["account"]["jid"]
-    end
-    
-    def password
-      @settings["account"]["password"]
-    end
-    
     def profile
-      default = @settings["profiles"]["default"]
-      current = @settings["profiles"][@profile]
-      OpenStruct.new(default.merge(current))
+      default = {:nick => "botabot", :format => ["!%c", "%n: ", "%n, "]}
+      default_profile = @settings[:default]
+      current = @settings[@profile]
+      profile = default.merge(default_profile).merge(current)
+      #raise ArgumentError unless valid?
+      return profile
     end
 
-    def set_profile(profile = "default")
-      # TODO: check if profile exists
+    def valid?
+      properties = [:jid, :password, :room]
+      properties.all? { |item| self.profile.key?(property) }
+    end
+
+    def set_profile(profile = :default)
+      profile = profile.to_sym
+      raise ArgumentError unless @settings.key?(profile)
       @profile = profile
+    end
+
+    def method_missing(property, *args)
+      raise NoMethodError if block_given? or (not args.empty?)
+      value = self.profile[property]
+      raise NoMethodError if value.nil?
+      return value
     end
   end
 end
