@@ -1,4 +1,4 @@
-class ConfigurationNotFound < StandardError ; end
+class ConfigurationError < StandardError ; end
 class PluginError < StandardError ; end
 class NoCommandGivenError < StandardError ; end
 class BadPermissionsError < StandardError ; end
