@@ -1,5 +1,5 @@
 plugin :commands, "dostupné příkazy" do
   commands = Array.new
   BotaBot::Plugins.all.each { |name, plugin| commands.push(name) }
-  muc.say("Dostupné příkazy: #{commands.join(", ")}")
+  reply("Dostupné příkazy: #{commands.join(", ")}")
 end
