@@ -4,10 +4,10 @@
 
 plugin :dice, "throws a dice for you" do |*args|
   if args.empty?
-    muc.say( (1 + rand(6)).to_s )
+    reply( (1 + rand(6)).to_s )
   elsif args.include?("help")
-    muc.say("Usage: .dice [number of sides]")
+    reply("Usage: .dice [number of sides]")
   else
-    muc.say((1 + rand( args[0].to_i )).to_s)
+    reply((1 + rand( args[0].to_i )).to_s)
   end
 end
